Starting with the first section

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 body { 
     background-color: #02598b;
-    background-image: linear-gradient(120deg, #011121 0%,#061c36 100%) ;
+    background-image: linear-gradient(120deg, #011121 0%,#092f5e 100%) ;
     /* background-image: -moz-linear-gradient(120deg ,#011121,#04182b) */
     height: 100%;
 }
