Changed the scss into components and sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,65 +1,4 @@
 @charset "UTF-8";
-body {
-  background-color: #011121;
-  background-image: linear-gradient(120deg, #011121 0%, #061c36 100%);
-  height: 100%;
-}
-
-.navbar-dark .navbar-brand,
-.navbar-dark .navbar-brand:hover,
-.navbar-dark .navbar-brand:focus {
-  color: #4dc6c7;
-  font-family: "Outfit", sans-serif;
-  cursor: default;
-}
-
-.navbar li a {
-  color: #4dc6c7;
-}
-.navbar li a:hover {
-  color: goldenrod;
-}
-.navbar .nav-link.active {
-  color: #00305c !important;
-}
-
-@media (max-width: 768px) {
-  .navbar.navbar-expand-md {
-    background-color: #021723;
-    background-image: linear-gradient(90deg, #01090e 0%, #03254f 100%);
-  }
-  .collapse.navbar-collapse .navbar-nav .nav-item:active {
-    background-color: #075e8a;
-    border: #4dc6c7 solid 1px;
-  }
-}
-/* Nice scrollbar */
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #00305c;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #31a6c3;
-}
-
-/* No scrollbar in mobile */
-@media (max-width: 768px) {
-  ::-webkit-scrollbar {
-    width: 0px;
-  }
-}
 /*!
  * Bootstrap  v5.2.3 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -10828,6 +10767,66 @@ textarea.form-control-lg {
   }
   .d-print-none {
     display: none !important;
+  }
+}
+.navbar-dark .navbar-brand,
+.navbar-dark .navbar-brand:hover,
+.navbar-dark .navbar-brand:focus {
+  color: #4dc6c7;
+  font-family: "Outfit", sans-serif;
+  cursor: default;
+}
+
+.navbar.navbar-expand-md {
+  background: linear-gradient(120deg, #011121 0%, #061c36 100%);
+}
+
+.navbar li a {
+  color: #4dc6c7;
+}
+.navbar li a:hover {
+  color: goldenrod;
+}
+.navbar .nav-link.active {
+  color: #00305c !important;
+}
+
+@media (max-width: 768px) {
+  .collapse.navbar-collapse .navbar-nav .nav-item:active {
+    background-color: #075e8a;
+    border: #4dc6c7 solid 1px;
+  }
+}
+body {
+  background: linear-gradient(120deg, #011121 0%, #061c36 100%);
+  height: 100%;
+}
+
+/* Nice scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #00305c;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #31a6c3;
+}
+
+/* No scrollbar in mobile */
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 0px;
   }
 }
 
