--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: "Outfit", "system-ui", -apple-system;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -3695,7 +3695,7 @@ textarea.form-control-lg {
   --bs-navbar-brand-font-size: 1.25rem;
   --bs-navbar-brand-color: rgba(0, 0, 0, 0.9);
   --bs-navbar-brand-hover-color: rgba(0, 0, 0, 0.9);
-  --bs-navbar-nav-link-padding-x: 0.5rem;
+  --bs-navbar-nav-link-padding-x: 0.8rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
   --bs-navbar-toggler-padding-x: 0.75rem;
   --bs-navbar-toggler-font-size: 1.25rem;
@@ -10773,7 +10773,7 @@ textarea.form-control-lg {
 .navbar-dark .navbar-brand:hover,
 .navbar-dark .navbar-brand:focus {
   color: #4dc6c7;
-  font-family: "Outfit", sans-serif;
+  font-weight: 200;
   cursor: default;
 }
 
@@ -10791,15 +10791,21 @@ textarea.form-control-lg {
   color: #00305c !important;
 }
 
-@media (max-width: 768px) {
+.collapse.navbar-collapse .navbar-nav .nav-item:active {
+  background-color: #075e8a;
+  border: #4dc6c7 solid 1px;
+}
+
+@media (min-width: 768px) {
   .collapse.navbar-collapse .navbar-nav .nav-item:active {
-    background-color: #075e8a;
-    border: #4dc6c7 solid 1px;
+    background-color: transparent;
+    border: 0;
   }
 }
 body {
   background: linear-gradient(120deg, #011121 0%, #061c36 100%);
   height: 100%;
+  color: #adb5bd;
 }
 
 /* Nice scrollbar */
@@ -10828,6 +10834,22 @@ body {
   ::-webkit-scrollbar {
     width: 0px;
   }
+}
+.intro-section {
+  padding-top: 5rem;
+}
+.intro-section h1 {
+  color: #4dc6c7;
+  margin-bottom: 2rem;
+}
+.intro-section .intro-description {
+  color: #adb5bd;
+  text-align: justify;
+  line-height: 1.5em;
+}
+.intro-section .image-content {
+  display: block;
+  margin: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
