--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -4,8 +4,9 @@
     background: linear-gradient(120deg, c.$dark-background 0%, c.$dark-background-2 100%) ;
 }
 
-@mixin description {
-    color: c.$gray-500;
-    text-align: justify;
-    line-height: 1.5em;
+@mixin absolute-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
