--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -5,7 +5,7 @@
     .navbar-brand,
     .navbar-brand:hover,
     .navbar-brand:focus {
-      color: c.$light-blue;
+      color: c.$light-blue-300;
       font-weight: 200;
       cursor: default;
     }
