--- a/scss/components/animations.scss
+++ b/scss/components/animations.scss
@@ -1,13 +1,12 @@
 @keyframes pulse-border {
   0% {
     transform: scale(0.95);
-  }
-  
-  50% {
-    transform: scale(1.5);
+    opacity: 0.6;
   }
   
   100% {
-    transform: scale(1);
+    transform: scale(1.5);
+    opacity: 0.1;
   }
+
 }
