--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -32,7 +32,11 @@ section {
                 height: 4rem;
                 border: 0.25rem solid c.$light-blue-300;
                 border-radius: 50%;
-                animation: pulse-border 4s linear infinite;
+                animation: pulse-border 2s linear infinite;
+                
+                &--2 {
+                    animation-delay: 1s;
+                }
             }
             
         }
@@ -59,6 +63,8 @@ section {
         margin:auto;
     }
     
-    
+    .next-date {
+        background-color: #00305c77;
+    }
     
 }
