Changed all the file structure for production

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @use 'components/animations';
 
 // FONTAWESOME
+@use "fontawesome/fontawesome";
 @use "fontawesome/regular";
 
 // IMPORT THE SECTIONS
