--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -33,5 +33,13 @@ $display-font-sizes: (
   6: 2rem
 );
 
+// ACCORDION
+$accordion-color: $light;
+$accordion-bg: $dark;
+$accordion-border-color: rgba($dark, .125);
+$accordion-padding-y: 2.25rem;
+$accordion-button-active-bg: $primary;
+$accordion-button-active-color: $secondary;
+
 // IMPORT BOOTSTRAP 5
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
