--- a/scss/sections/_body.scss
+++ b/scss/sections/_body.scss
@@ -2,9 +2,11 @@
 @use '../components/mixins' as *;
 
 // BASIC BODY STYLING
-body {
+html, body {
     @include gradient;
-    height: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
     color: $gray-500;
 }
   
