--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -4,7 +4,7 @@
 section {
     width: 100%;
     height: 100%;
-    min-height: 100vh;
+    // min-height: 100vh;
     &.intro-section {
         padding-top: 15vh;
         
