--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -3,8 +3,8 @@
 
 section {
     width: 100%;
-    height: 100%;
-    min-height: 100vh;
+    // height: 100%;
+    // min-height: 100vh;
     &.intro-section {
         padding-top: 15vh;
         
