--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -1,10 +1,15 @@
 @use '../custom' as c;
 @use '../components/mixins' as mix;
 
-section {
+.section {
     width: 100%;
-    // height: 100%;
+    height: 100%;
     // min-height: 100vh;
+    
+    &-calendar {
+        min-height: 100vh;
+    }
+    
     &.intro-section {
         padding-top: 15vh;
         
