--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -6,9 +6,6 @@
     height: 100%;
     // min-height: 100vh;
     
-    &-calendar {
-        min-height: 100vh;
-    }
     
     &.intro-section {
         padding-top: 15vh;
@@ -72,5 +69,21 @@
         background-color: #00305c77;
     }
     
+    // CALENDAR RELATED
+    &-calendar {
+        min-height: 100vh;
+        
+        button {
+            
+            div > span{
+                
+                &.description { 
+                    color: c.$gray-500 !important;
+                    margin-left: 10vw;
+                    font-weight: 300;
+                }
+            }
+        }
+    }
     
 }
