--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4300,11 +4300,11 @@ textarea.form-control-lg {
   --bs-accordion-btn-padding-y: 2.25rem;
   --bs-accordion-btn-color: #7BE0D6;
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237BE0D6'%3e%3cpath fill-rule='evenodd' d='M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237BE0D6'%3e%3cpath fill-rule='evenodd' d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z'/%3e%3c/svg%3e");
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-360deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2300305c'%3e%3cpath fill-rule='evenodd' d='M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23011121'%3e%3cpath fill-rule='evenodd' d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7z'/%3e%3c/svg%3e");
   --bs-accordion-btn-focus-border-color: #a6e3e3;
   --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(77, 198, 199, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
@@ -19148,10 +19148,14 @@ html, body {
 .section-calendar {
   min-height: 100vh;
 }
-.section-calendar button div > span.description {
-  color: #adb5bd !important;
-  margin-left: 10vw;
+.section-calendar button div span {
   font-weight: 300;
+}
+.section-calendar .accordion-body p {
+  color: #e9ecef;
+  font-weight: 300;
+  text-align: justify;
+  margin-bottom: 4vh;
 }
 
 /*# sourceMappingURL=style.css.map */
