--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19161,6 +19161,7 @@ html, body {
   color: #e9ecef;
   font-weight: 300;
   text-align: justify;
+  font-size: 1.5rem;
   margin-bottom: 4vh;
 }
 .section-contact {
