--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -94,6 +94,7 @@
                 color: c.$gray-200;
                 font-weight: 300;
                 text-align: justify;
+                font-size: 1.5rem;
                 margin-bottom: 4vh;
             }
         }
