--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1987,7 +1987,7 @@ progress {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-family: SF Pro;
+  font-family: "Outfit";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -2131,7 +2131,7 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
-  font-family: SF Pro;
+  font-family: "Outfit";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -2730,7 +2730,7 @@ textarea.form-control-lg {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: SF Pro;
+  --bs-btn-font-family: Outfit;
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
