fix: page structure going off when broken img

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19199,6 +19199,11 @@ html, body {
     margin: 0 5vh;
   }
 }
+.section .carousel-item {
+  min-height: 870px;
+  min-width: 600px;
+  text-align: center;
+}
 
 footer {
   margin-top: auto;
