--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -126,4 +126,10 @@
         
     }
     
+    .carousel-item {
+        min-height: 870px;
+        min-width: 600px;
+        text-align: center;
+    }
+    
 }
