better fix that the last one

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19200,8 +19200,8 @@ html, body {
   }
 }
 .section .carousel-item {
-  min-height: 870px;
-  min-width: 600px;
+  min-height: 50vw;
+  min-width: 20vw;
   text-align: center;
 }
 
