--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -127,8 +127,8 @@
     }
     
     .carousel-item {
-        min-height: 870px;
-        min-width: 600px;
+        min-height: 50vw;
+        min-width: 20vw;
         text-align: center;
     }
     
