max height for photos

--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -126,4 +126,11 @@
         
     }
     
+    .carousel-item {
+        img {
+            
+            max-height: 45vw;
+        }
+    }
+    
 }
