--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19199,6 +19199,9 @@ html, body {
     margin: 0 5vh;
   }
 }
+.section .carousel-item img {
+  max-height: 45vw;
+}
 
 footer {
   margin-top: auto;
