fix: copyright not occupying 100% of the width

--- a/scss/sections/_section.scss
+++ b/scss/sections/_section.scss
@@ -129,7 +129,7 @@
     .carousel-item {
         img {
             
-            max-height: 45vw;
+            // max-height: 820px;
         }
     }
     
